--- a/Rahul _ video chat app/client/package.json
+++ b/Rahul _ video chat app/client/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "client",
+	"name": "Client",
 	"version": "0.1.0",
 	"private": true,
-	"proxy": "https://warm-wildwood-81069.herokuapp.com",
+	"proxy": "localhost:8800",
 	"dependencies": {
 		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
